--- a/index.html
+++ b/index.html
@@ -598,6 +598,20 @@
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyBo0jRzfh3DVNdCkPjXXgwvi2cfacXE1Ok",
+    authDomain: "cvw-dashboard-zambia.firebaseapp.com",
+    projectId: "cvw-dashboard-zambia",
+    storageBucket: "cvw-dashboard-zambia.firebasestorage.app",
+    messagingSenderId: "905368303709",
+    appId: "1:905368303709:web:e71f7abc063e78224b35b4"
+  };
+
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+</script>
 </head>
 <body>
 
