--- a/index.html
+++ b/index.html
@@ -1355,42 +1355,18 @@ window.handleLogin = function() {
                                 currentUser.agency = userData.agency || null;
                             }
                             
-                            \1
-          if (currentUser && currentUser.role === 'admin') {
-            const btn=document.createElement('button');
-            btn.innerText='📜 View Logs';
-            btn.className='btn';
-            btn.style='margin:10px; background:#17a2b8; color:white;';
-            btn.onclick=openLogsModal;
-            document.querySelector('body').appendChild(btn);
-          }
+                            showDashboard();
                             errorDiv.style.display = 'none';
                             showNotification(`Welcome, ${currentUser.name}! (Online)`, 'success');
                         })
                         .catch(error => {
                             console.warn('Could not load user profile from Firestore:', error);
-                            \1
-          if (currentUser && currentUser.role === 'admin') {
-            const btn=document.createElement('button');
-            btn.innerText='📜 View Logs';
-            btn.className='btn';
-            btn.style='margin:10px; background:#17a2b8; color:white;';
-            btn.onclick=openLogsModal;
-            document.querySelector('body').appendChild(btn);
-          }
+                            showDashboard();
                             errorDiv.style.display = 'none';
                             showNotification(`Welcome, ${currentUser.name}! (Online - No Profile)`, 'success');
                         });
                 } else {
-                    \1
-          if (currentUser && currentUser.role === 'admin') {
-            const btn=document.createElement('button');
-            btn.innerText='📜 View Logs';
-            btn.className='btn';
-            btn.style='margin:10px; background:#17a2b8; color:white;';
-            btn.onclick=openLogsModal;
-            document.querySelector('body').appendChild(btn);
-          }
+                    showDashboard();
                     errorDiv.style.display = 'none';
                     showNotification(`Welcome, ${currentUser.name}! (Online)`, 'success');
                 }
@@ -1414,15 +1390,7 @@ function tryOfflineLogin(username, password, errorDiv) {
         currentUser = { ...demoUsers[username] };
         currentUser.username = username;
         currentUser.offline = true;
-        \1
-          if (currentUser && currentUser.role === 'admin') {
-            const btn=document.createElement('button');
-            btn.innerText='📜 View Logs';
-            btn.className='btn';
-            btn.style='margin:10px; background:#17a2b8; color:white;';
-            btn.onclick=openLogsModal;
-            document.querySelector('body').appendChild(btn);
-          }
+        showDashboard();
         errorDiv.style.display = 'none';
         showNotification(`Welcome, ${currentUser.name}! (Offline Demo)`, 'success');
         console.log('Offline login successful for:', username);
@@ -2483,33 +2451,16 @@ window.deleteDemoUser = function(username) {
 };
 
 // Legacy delete function for backward compatibility
-
-window.deleteUser = function(uid) {
-  if (!currentUser || currentUser.role !== 'admin') {
-    showNotification('Only Admins can delete users', 'error');
-    return;
-  }
-  if (confirm('Are you sure you want to delete this user?')) {
-    if (db && navigator.onLine && !currentUser.offline) {
-      db.collection("users").doc(uid).delete().then(() => {
-        showNotification('User deleted successfully', 'success');
-        logActivity('deleteUser', uid, 'Deleted user');
-        updateUsersList();
-      }).catch(err => {
-        console.error("Delete user failed:", err);
-        showNotification('Error deleting user: ' + err.message, 'error');
-      });
+window.deleteUser = function(identifier) {
+    // Try to determine if this is a Firebase UID or demo username
+    if (identifier.length > 15) {
+        // Likely a Firebase UID
+        deleteFirebaseUser(identifier, 'Unknown Email');
     } else {
-      if (demoUsers[uid]) {
-        delete demoUsers[uid];
-        showNotification(`User "${uid}" deleted locally`, 'warning');
-        logActivity('deleteUser', uid, 'Deleted user (offline mode)');
-        updateUsersList();
-      }
+        // Likely a demo username
+        deleteDemoUser(identifier);
     }
-  }
 };
-
 
 window.manageAgencies = function() {
     if (!currentUser || currentUser.role !== 'admin') {
@@ -2797,33 +2748,6 @@ console.log('CVW Dashboard loaded and ready');
     </div>
   </div>
 </div>
-
-
-<!-- Activity Logs Modal -->
-<div class="modal-overlay" id="logsModal" style="display:none;">
-  <div class="modal-container" style="max-width:600px;">
-    <div class="modal-header">
-      <h2>📜 Activity Logs</h2>
-      <button class="modal-close" onclick="closeLogsModal()">×</button>
-    </div>
-    <div class="modal-body" id="logsList" style="max-height:400px; overflow:auto;">
-      Loading logs...
-    </div>
-    <div style="padding:20px; display:flex; justify-content:flex-end;">
-      <button class="btn" onclick="closeLogsModal()" style="background:#6c757d; color:white;">Close</button>
-    </div>
-  </div>
-</div>
-
-<script>
-function openLogsModal() {
-  document.getElementById('logsModal').style.display = 'flex';
-  listenToLogs();
-}
-function closeLogsModal() {
-  document.getElementById('logsModal').style.display = 'none';
-}
-</script>
 
 </body>
 </html>
