--- a/index.html
+++ b/index.html
@@ -632,6 +632,18 @@ function closeAddServiceModal() {
                 grid-template-columns: repeat(2, 1fr);
             }
         }
+
+.badge-service {
+  display: inline-block;
+  background: #eef2ff;
+  color: #4f46e5;
+  padding: 3px 8px;
+  margin: 2px;
+  border-radius: 12px;
+  font-size: 0.75rem;
+  font-weight: 600;
+}
+
 </style>
 
 
@@ -2115,16 +2127,25 @@ function updateTable() {
 
     filteredData.forEach(row => {
         const tr = document.createElement('tr');
-        tr.innerHTML = `
-            <td style="font-weight: 600; color: #2c3e50;">${row['cvw code']}</td>
-            <td><span class="badge badge-${row['Record Type'].toLowerCase()}">${row['Record Type']}</span></td>
-            <td>${row['Date Reported'].toLocaleDateString()}</td>
-            <td>${row['District']}</td>
-            <td>${row['CVW Gender']}</td>
-            <td>${row['CVW Age']}</td>
-            <td>${row['Crime Type']}</td>
-            <td>${row['Services Rendered'] || 'N/A'}</td>
-        `;
+        
+const servicesBadges = (row['Services Rendered'] || 'N/A')
+    .split(',')
+    .map(s => s.trim())
+    .filter(Boolean)
+    .map(s => `<span class="badge-service">${s}</span>`)
+    .join(' ');
+
+tr.innerHTML = `
+    <td style="font-weight: 600; color: #2c3e50;">${row['cvw code']}</td>
+    <td><span class="badge badge-${row['Record Type'].toLowerCase()}">${row['Record Type']}</span></td>
+    <td>${row['Date Reported'].toLocaleDateString()}</td>
+    <td>${row['District']}</td>
+    <td>${row['CVW Gender']}</td>
+    <td>${row['CVW Age']}</td>
+    <td>${row['Crime Type']}</td>
+    <td>${servicesBadges || 'N/A'}</td>
+`;
+
         tbody.appendChild(tr);
     });
 }
